--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
     <section class="Mclaren-Models">
             <div class="virtual-reality">
-                <img src="/images/image6.jpg" alt="">
+                <img src="./images/image6.jpg" alt="">
                 <div class="virtual-reality-header">
                     <p>VIRTUAL REALITY</p>
                     <h1>SOLUS <span>GT</span></h1>
@@ -115,7 +115,7 @@
             <p>FINELY HONED. RADICAL. AGGRESSIVE. THE 765LT SPIDER DESIGN IS PURE LONGTAIL.</p>
         </div>
         <hr>
-            <video src="/videos/blue.mp4"autoplay muted controls loop ></video>
+            <video src="./videos/blue.mp4"autoplay muted controls loop ></video>
          <hr>
             <div>
             <p>The bespoke carbon fibre body is carved and sculpted to increase downforce. And improve cooling. Its profile is elongated and minimal. Lowered front suspension and a wider front track add purposeful aggression. Dramatic side air intakes inspired by the legendary 675LT Spider. All-new super-lightweight 10-spoke alloy wheels and carbon fibre active rear wing are McLaren design at its functionally beautiful best. The essence of LT.</p>
