--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="nav-btn">
                 FIND A RETAILER
             </button>
-            <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav"><span>|||</span></button>
+            <button aria-controls="primary-navigation" aria-expanded="false" class="mobile-nav"><span class="active" on-color="white">|||</span></button>
         </nav>
         <script src="./js/nav.js" defer></script>
     </header>
